[workspace]
members = [
    "jito_protos",
    "."
]

[workspace.package]
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
homepage = "https://your-homepage.com"
version = "0.1.0"

[workspace.dependencies]
tonic = { version = "0.10" }

[package]
name = "shreds-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
byteorder = "1.4"
chrono = "0.4.41"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.11.3"
jito-protos = { path = "./jito_protos" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-pubkey = "2.2.1"
solana-client = "2.2.1"
solana-sdk = "2.2.1"
solana-entry = "2.2.1"
solana-message = "2.2.1"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["full"] }
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }
yellowstone-grpc-client = "6.1.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
